@@ -35,4 +35,11 @@ kpilotinclude_HEADERS = kpilotlink.h uiDialog.h plugin.h syncAction.h \
 
 kde_kcfg_DATA = kpilotlib.kcfg
 
+check_PROGRAMS = testactions
+TESTS = testactions
+
+testactions_SOURCES = testactions.cc
+testactions_LDFLAGS = $(all_libraries) $(KDE_RPATH)
+testactions_LDADD  = libkpilot.la
+
 include $(top_srcdir)/doc/api/Doxyfile.am
